TA-759 Result focus state alignment fix (#670)
* TA-759 changes office result margins

* TA-759 changes result margins on mobile and tablet

* TA-759 removes result container margin

* TA-759 fixes details margin on tablet

* TA-759 fixes result margins on tablet

--- a/src/client/components/organisms/office-detail/office-detail.scss
+++ b/src/client/components/organisms/office-detail/office-detail.scss
@@ -3,12 +3,9 @@
   padding: 34px 30px;
   background: #ffffff;
   position: relative;
-  @include grid-media($sba-grid-small) {
-    padding: 10px 0px;
-  }
 
   @include grid-media($sba-grid-medium) {
-    padding-left: 20px;
+    padding-left: 30px;
   }
 
   h2 {
@@ -23,10 +20,9 @@
   top: 20px;
   right: 10px;
   padding: 10px;
-  @include grid-media($sba-grid-small) {
-    top: 10px;
-    right: 0px;
-    padding: 0px;
+  @include grid-media($sba-grid-medium) {
+    top: 30px;
+    right: 30px;
   }
 
   img {
